<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">나는 불펜人이다</string>
    <string name="internet_not_connected_msg">인터넷 연결이 끊겼습니다.</string>
    <string name="imgContentDescription">content image</string>
    <string name="action_settings">Settings</string>

    <!-- ListView & Content -->
    <string name="remoteViewTitle_Default">Wait..</string>
    <string name="remoteViewTitle_LostInternet">인터넷 연결 안됨</string>
    <string name="remoteViewTitle_Scrap">스크랩 목록</string>
    <string name="remoteViewTitle_MlbTown">MLB 타운</string>
    <string name="remoteViewTitle_KboTown">한국야구 타운</string>
    <string name="remoteViewTitle_Bullpen">BULLPEN</string>
    <string name="remoteViewTitle_MlbTown_TodayBest">MLB 타운 TODAY BEST</string>
    <string name="remoteViewTitle_KboTown_TodayBest">한국야구 타운 TODAY BEST</string>
    <string name="remoteViewTitle_Bullpen_TodayBest">BULLPEN TODAY BEST</string>
    <string name="remoteViewTitle_Bullpen1000">BULLPEN 조회수 1000</string>
    <string name="remoteViewTitle_Bullpen2000">BULLPEN 조회수 2000</string>
    <string name="remoteViewTitle_News">뉴스</string>
    <string name="btn_search">Search</string>
    <string name="btn_addtoblacklist">BlackList</string>
    <string name="btn_top">Top</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_next">Next</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_export">Export</string>
    <string name="btn_scrap">Scrap</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_empty">Empty</string>
    <string name="text_writer_not_existed">작성자 없음</string>
    <string name="text_title_not_existed">제목 없음</string>
    <string name="text_comment_not_existed">리플 없음</string>
    <string name="text_lost_internet_connection">인터넷 연결이 끊겼습니다.</string>
    <string name="text_loadingView">Loading..</string>
    <string name="text_failed_may_be_deleted">글이 삭제 되었습니다.</string>
    <string name="text_failed_io_exception">서버 접속 실패. 잠시 후 다시 시도해보세요.</string>
    <string name="text_failed_json_exception">서버로부터 가져온 정보 오류 발생1</string>
    <string name="text_failed_stack_overflow">서버로부터 가져온 정보 오류 발생2</string>
    <string name="text_failed_out_of_memory">서버로부터 가져온 정보 오류 발생3</string>
    <string name="text_failed_unknown">알 수 없는 에러 발생</string>
    <string name="text_duplicated_scrap_item">이미 스크랩 되어 있습니다.</string>
    <string name="text_not_existed_item">스크랩 목록에 존재하지 않습니다.</string>
    <string name="text_completed_to_scrap_item">스크랩 되었습니다.</string>
    <string name="text_completed_to_delete_scrapped_item">스크랩 목록에서 삭제했습니다.</string>

    <!-- Configuration activity -->
    <string name="title_activity_configuration">설정</string>
    <string name="prompt_refreshTime">새로고침 시간</string>
    <string name="prompt_board">목록</string>
    <string name="prompt_textSize">글자 크기</string>
    <string name="text_permitMobileConnection">3G/LTE\n접속 허용</string>
    <string name="text_refreshTime">새로 고침</string>
    <string name="text_board">게시판</string>
    <string name="text_blackList">글쓴이 차단</string>
    <string name="text_blockedWords">제목 차단</string>
    <string name="text_backgroundImage">배경 화면</string>
    <string name="text_settingText">글자 설정</string>
    <string name="text_appInfo">만든이</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="text_blackList_empty">콤마로 구분해주세요.</string>
    <string name="text_blockedWords_empty">콤마로 구분해주세요.</string>
    <string name="appInfo">smilolistener@gmail.com</string>

    <!-- WebView activity -->
    <string name="title_activity_web_view">새창 보기</string>
    <string name="btn_close">Close</string>
    <string name="text_progressbar_title">Loading</string>
    <string name="text_progressbar_message">잠시만 기다려 주세요.</string>

    <!-- Search activity -->
    <string name="title_activity_search">검색</string>
    <string name="prompt_searchCategory">카테고리</string>
    <string name="prompt_searchSubject">말머리</string>
    <string name="text_searchCategory">카테고리</string>
    <string name="text_searchKeyword">검색어</string>
    <string name="text_searchSubject">말머리</string>
    <string name="text_need_to_enter_keyword">검색어를 입력해주세요.</string>
    
    <!-- AddToBlacklist activity -->
    <string name="title_activity_add_to_black_list">차단 목록에 추가하시겠습니까?</string>
    <string name="text_add_to_black_list_msg">님을 차단 목록에 추가했습니다.</string>

    <!-- Search category parameter -->
    <string name="text_category_parameter_title">stt</string>
    <string name="text_category_parameter_title_contents">sct</string>
    <string name="text_category_parameter_id">sid</string>
    <string name="text_category_parameter_writer">swt</string>
    <string name="text_category_parameter_subject">spf</string>
    <string name="text_category_parameter_hits">hit</string>

    <!-- Search subject parameter -->
    <string name="text_subject_parameter_1">1</string>
    <string name="text_subject_parameter_2">2</string>
    <string name="text_subject_parameter_3">3</string>
    <string name="text_subject_parameter_4">4</string>
    <string name="text_subject_parameter_5">5</string>
    <string name="text_subject_parameter_6">6</string>
    <string name="text_subject_parameter_7">7</string>
    <string name="text_subject_parameter_8">8</string>
    <string name="text_subject_parameter_9">9</string>
    <string name="text_subject_parameter_10">10</string>
    <string name="text_subject_parameter_11">11</string>
    <string name="text_subject_parameter_12">12</string>
    <string name="text_subject_parameter_13">13</string>
    <string name="text_subject_parameter_14">14</string>
    <string name="text_subject_parameter_15">15</string>
    <string name="text_subject_parameter_16">16</string>
    <string name="text_subject_parameter_17">17</string>
    <string name="text_subject_parameter_18">18</string>
    <string name="text_subject_parameter_19">19</string>
    <string name="text_subject_parameter_20">25</string>
    <string name="text_subject_parameter_21">20</string>
    <string name="text_subject_parameter_22">21</string>
    <string name="text_subject_parameter_23">22</string>
    <string name="text_subject_parameter_24">23</string>
    <string name="text_subject_parameter_25">24</string>

    <!-- Search subject list -->
    <string name="text_subject_1">정치</string>
    <string name="text_subject_2">19금</string>
    <string name="text_subject_3">단문</string>
    <string name="text_subject_4">펌글</string>
    <string name="text_subject_5">게임</string>
    <string name="text_subject_6">질문</string>
    <string name="text_subject_7">17금</string>
    <string name="text_subject_8">음악</string>
    <string name="text_subject_9">응원</string>
    <string name="text_subject_10">COB</string>
    <string name="text_subject_11">뻘글</string>
    <string name="text_subject_12">SK</string>
    <string name="text_subject_13">두산</string>
    <string name="text_subject_14">롯데</string>
    <string name="text_subject_15">삼성</string>
    <string name="text_subject_16">한화</string>
    <string name="text_subject_17">KIA</string>
    <string name="text_subject_18">넥센</string>
    <string name="text_subject_19">LG</string>
    <string name="text_subject_20">NC</string>
    <string name="text_subject_21">후기</string>
    <string name="text_subject_22">채팅</string>
    <string name="text_subject_23">짤방</string>
    <string name="text_subject_24">경제</string>
    <string name="text_subject_25">아이돌</string>

</resources>