<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/baseball_field_grass_design" > 

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/textListTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:paddingBottom="10dp"
	        android:paddingLeft="10dp"
	        android:paddingTop="10dp"
	        android:text="@string/remoteViewTitle_Default" />

        <Button
            android:id="@+id/btnListNavTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnListNavPrev"
            android:text="@string/btn_top" />

        <Button
            android:id="@+id/btnListNavPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnListNavNext"
            android:text="@string/btn_prev" />

        <Button
            android:id="@+id/btnListNavNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnListRefresh"
            android:text="@string/btn_next" />

	    <Button
            android:id="@+id/btnListRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnListSetting"
            android:text="@string/btn_refresh" />
	           
	    <Button
	        android:id="@+id/btnListSetting"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:text="@string/btn_setting" />

    </RelativeLayout>
        
    <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000" />

</LinearLayout>

<!-- background image url : http://www.hdwallpapersdesktop.com/iPad/Miscellaneous/imagepages/image2.htm -->