<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
        android:background="@drawable/baseball_field_grass_design" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textLostInternetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/remoteViewTitle_LostInternet" />

        <Button
            android:id="@+id/btnLostInternetRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnLostInternetSetting"
            android:text="@string/btn_refresh" />
               
        <Button
            android:id="@+id/btnLostInternetSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_setting" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/textLostInternetConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/text_lost_internet_connection" />

</LinearLayout>
